# amelie

./: .editorconfig  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE.md  README.md  SECURITY.md  manage.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_docker_image.yml  check_fast_forwardable_pull_request.yml  fast_forward_merge.yml  ia_gitlab_ci.yml  ia_gitlab_ci_retrieve.yml  merge_to_production.yml
amelie/: __init__.py  asgi.py  celeryapp.py  celeryping.py  forms.py  test_admin.py  test_all_urls.py  test_missing_migrations.py  test_translation.py  test_urls.py  urls.py  views.py  wsgi.py
amelie/about/: admin.py  apps.py  forms.py  graphql.py  models.py  urls.py  views.py
amelie/about/migrations/: 0001_initial.py  0002_page_educational.py
amelie/about/templates/: page.html  page_delete.html  page_form.html  pages.html
amelie/activities/: admin.py  apps.py  feeds.py  forms.py  graphql.py  mail.py  models.py  tasks.py  test_urls.py  urls.py  utils.py  views.py
amelie/activities/migrations/: 0001_initial.py  0002_eventdeskregistrationmessage.py  0003_auto_20190613_1844.py  0004_auto_20201103_2220.py  0005_dish_allergens.py  0006_enrollmentoptioncheckbox_maximum.py  0007_activity_waiting_list_locked.py  0008_enrollmentoptionnumeric_enrollmentoptionnumericanswer.py  0009_auto_20221003_1815.py  0010_auto_20221031_2218.py  0011_alter_activity_components.py  0012_activity_enrollment_private.py  0012_alter_activity_price_and_more.py  0013_activity_enrollment_private.py
amelie/activities/templates/: activity.html  (+19 more)
amelie/api/: activitystream.py  activitystream_utils.py  admin.py  api.py  apps.py  authentication.py  authentication_types.py  committee.py  common.py  company.py  context_processors.py  decorators.py  education.py  exceptions.py  handlers.py  models.py  narrowcasting.py  news.py  person.py  personal_tab.py  push.py  push_utils.py  test_activitystream.py  test_authentication.py  test_common.py  urls.py  utils.py  videos.py
amelie/blame/: apps.py  registrations.py  urls.py  views.py
amelie/calendar/: admin.py  apps.py  forms.py  graphql.py  managers.py  models.py  participation_urls.py  tasks.py  views.py
amelie/claudia/: account_urls.py  account_views.py  ad.py  admin.py  apps.py  clau.py  claudia_urls.py  claudia_views.py  forms.py  google.py  kanidm.py  kanidm_urls.py  kanidm_views.py  mappable.py  models.py  tasks.py  tools.py
amelie/companies/: admin.py  apps.py  forms.py  graphql.py  managers.py  models.py  urls.py  views.py
amelie/data_export/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
amelie/education/: admin.py  apps.py  forms.py  graphql.py  managers.py  models.py  test_urls.py  urls.py  utils.py  views.py
amelie/files/: admin.py  apps.py  graphql.py  images2gif.py  managers.py  models.py
amelie/gmm/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
amelie/graphql/: apps.py  auth.py  decorators.py  filters.py  helpers.py  i18n.py  jwt_handlers.py  schema.py  tests.py  urls.py  views.py
amelie/iamailer/: __init__.py  apps.py  mailer.py  mailtask.py  message.py  tasks.py
amelie/members/: admin.py  ajax_views.py  apps.py  committee_urls.py  committee_views.py  forms.py  graphql.py  graphql_types.py  managers.py  members_urls.py  models.py  query_forms.py  query_views.py  tasks.py  urls.py  utils.py  views.py
amelie/narrowcasting/: admin.py  apps.py  models.py  urls.py  views.py
amelie/news/: admin.py  apps.py  feeds.py  forms.py  graphql.py  models.py  urls.py  views.py
amelie/oauth/: admin.py  apps.py  forms.py  models.py  pipeline.py  urls.py  views.py
amelie/personal_tab/: admin.py  alexia.py  apps.py  debt_collection.py  forms.py  helpers.py  jsonapi.py  managers.py  models.py  pos_models.py  pos_views.py  print_views.py  register.py  statistics.py  test_helpers.py  transactions.py  urls.py  views.py
amelie/publications/: admin.py  apps.py  forms.py  graphql.py  managers.py  models.py  urls.py  views.py
amelie/room_duty/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
amelie/settings/: __init__.py  environ.py  generic.py  gitlab.py  local.py.default  local.py.localdev  tests.py  travis.py
amelie/statistics/: admin.py  apps.py  decorators.py  models.py  urls.py  views.py
amelie/style/: apps.py  context_processors.py  forms.py  robots.PRODUCTION.txt  robots.STAGING.txt
amelie/tools/: __init__.py  admin.py  amelie_messages.py  apps.py  ariana.py  asyncio.py  auth.py  buildinfo.py  cache.py  calendar.py  color_palette_generator.py  const.py  context_processors.py  cors.py  decorators.py  discord.py  documenso.py  encodings.py  fields.py  forms.py  functions.py  graphql.py  http.py  ipp_printer.py  keycloak.py  locale.py  logic.py  mail.py  managers.py  middleware.py  mixins.py  models.py  paginator.py  pdf.py  peertube.py  radius.dict  saml_processors.py  streaming_ia.py  tests.py  types.py  (+6 more)
amelie/twitter/: admin.py  apps.py  forms.py  manager.py  models.py  twitter.py  urls.py  views.py
amelie/videos/: admin.py  apps.py  forms.py  graphql.py  managers.py  models.py  urls.py  views.py
amelie/weekmail/: admin.py  apps.py  email_tools.py  forms.py  models.py  urls.py  views.py
certificates/: google-ianet-sp-metadata.xml  google-ianl-sp-metadata.xml  google-sp-metadata.xml
scripts/: compile_css.sh  merge_to_production.sh  prepare.sh  pullmaster.sh  run_mgmt.sh  run_tests.sh  start_celery.sh  start_flower.sh  start_web.sh  start_web_wsgi.sh
templates/: 403.html  404.html  405.html  500.html  aprilbanner.html  basis.html  frontpage.html  frontpage_af.html  login.html  menubar.html  menubar_af.html  profile_configure_forwarding.html  profile_edit.html  profile_overview.html  profile_picture_verification.html  profile_portrait_upload.html  profile_unknown.html  slider.html
templates/feeds/: news_content.html  news_title.html
templates/health_check/: index.html  partial_celery_tables.html
templates/oauth2_provider/: authorize.html  authorized-token-delete.html
(+795 files in other folders)
